--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,14 +1,23 @@
+@import "./sass/_variables.scss";
+
 .todo-app {
   text-align: center;
+  color: $dark-gray-color;
 }
 
 .todo-app-header {
-  background-color: #282c34;
+  background-color: $dark-gray-color;
+  color: $white-color;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
