--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -1,6 +1,11 @@
-$ligth-gray-color: #708090;
+$light-gray-color: #708090;
 $dark-gray-color: #102030;
 $white-color: #FFF;
 $electric-violet-color: #8f00ff;
 $baby-blue-color: #89cff0;
 $dodger-blue-color: dodgerblue;
+
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+$container-width: 800px;
