--- a/client/src/components/Loading/LoadingContainer.scss
+++ b/client/src/components/Loading/LoadingContainer.scss
@@ -1,9 +1,9 @@
 @import "../../sass/_animations.scss";
 
 .loading-wrapper {
-  right: 2.5vh;
+  left: 2.5vh;
   bottom: 2.5vh;
-  position: absolute;
+  position: fixed;
 
   .loading {
     margin: 5px;
