--- a/client/src/components/RoundBackGround/RoundBackGround.scss
+++ b/client/src/components/RoundBackGround/RoundBackGround.scss
@@ -1,7 +1,8 @@
 @import "../../sass/_variables.scss";
 
 .round-background-container {
-  height: 90vh;
+  min-height: 85vh;
+  height: calc(100% - 15vh);
   width: 100%;
   overflow: hidden;
   position: absolute;
@@ -9,7 +10,7 @@
 
   span.message {
     top: calc(50%);
-    background-color: $ligth-gray-color;
+    background-color: $light-gray-color;
     color: $white-color;
   }
 
