--- a/client/src/sass/_animations.scss
+++ b/client/src/sass/_animations.scss
@@ -87,3 +87,15 @@
     background-color: $baby-blue-color; 
   } 
 }
+
+@include keyframes(gradient) {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
