--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -8,4 +8,5 @@ $dodger-blue-color: dodgerblue;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 
-$container-width: 800px;
+$tablet-container-width: 70vw;
+$desktop-container-width: 50vw;
